style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 26px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;  
}

main img {
  width: 100%;
}

/* ---  Groups & Items --- */

.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}

form {
  
  border: 2px solid #000;
  justify-content: space-between;
  padding: 10px;
  
}

/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  padding: 0 10px;
  text-align: center;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
}

header nav ul {
  display: flex;
  justify-content: center;
  list-style-type: none;
}

header nav ul li a {
  flex-direction: row;
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

/* -------  Search Form ------- */
form {
 
  border: 2px solid #ff385c;
  padding: 10px;
}

form label {
  font-weight: bold;
  text-align: left;
}

form select,
form input {
  margin-bottom: 20px;
  width: 65%;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}

.form-separator{
  justify-content: space-between;
}
/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */
/* @media all and (max-width: 380px){
  .logo{
    font-size: 55px;
  }
}

@media all and (max-width: 480px){  
  form {
      display: inline!important;  
  }  
  } */

@media all and (min-width: 480px){
  form{
   
    justify-content: space-between;
    padding: 10px;
  }

  header {
    display: flex;
    justify-content: space-between;
  
  }
  .logo {
    margin-bottom: 20px;
    font-size: 48px;
  }
  header nav ul {
    align-items: center;
  }

  .grid-container {
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .about-description {
    margin-left: 0px;
    transform: translateY(20%);
  }

  section.alternate-background {
    padding-bottom: 45px;
  }

  .item label,
  .item input,
  .item select,
  .item button {
    display: flex;
    width: 100%;
  }

  form {
    display:flex;
    justify-content: space-between;
  }

  form div {
    display: flex;
    flex-direction: column;
    min-width: 0;
  }

  form label {
    align-self:flex-start;
  }
  
  form input, form select {
    width: 80%;
    margin-bottom: 5px;
  
  }

  .group {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-flow: row nowrap;
    align-items: center;
  }

  .find-rental {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
  }
  .find-rental .item {
    flex-direction: column;
    justify-content: flex-end;
  }
}




/* @media all and (min-width:1000px) {
  form div, form input {
    width: 150px;
  }

  form{
    justify-content: space-between;
  }
} */

